<?xml version="1.0"?>
<package format="3">
  <name>osqp</name>
  <version>0.6.2</version>
  <description>The Operator Splitting QP Solver</description>
  <maintainer email="tbd@tbd.tbd">Bartolomeo Stellato</maintainer>

  <license>>Apache License 2.0</license>

  <build_depend>git</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
